--- a/app/src/main/res/layout/activity_out_check_goods.xml
+++ b/app/src/main/res/layout/activity_out_check_goods.xml
@@ -98,7 +98,7 @@
                             android:layout_height="40dp"
                             android:layout_weight="1"/>
                         <include layout="@layout/line_shu"/>
-                        <com.fangzuo.assist.widget.MyWaveHouseSpinner
+                        <com.fangzuo.assist.widget.SpinnerWaveHouse
                             android:id="@+id/sp_wavehouse"
                             android:layout_width="0dp"
                             android:layout_height="40dp"
@@ -189,7 +189,7 @@
                             android:id="@+id/ed_batchNo"
                             android:layout_width="0dp"
                             android:layout_height="40dp"
-                            android:singleLine="true"
+
                             android:gravity="center"
                             android:background="@drawable/bg_edittext_selector"
                             android:layout_weight="1" />
