--- a/app/src/main/res/layout/activity_push_down_po.xml
+++ b/app/src/main/res/layout/activity_push_down_po.xml
@@ -99,7 +99,7 @@
 
                         <include layout="@layout/line_shu" />
 
-                        <com.fangzuo.assist.widget.MyWaveHouseSpinner
+                        <com.fangzuo.assist.widget.SpinnerWaveHouse
                             android:id="@+id/sp_wavehouse"
                             android:layout_width="0dp"
                             android:layout_height="40dp"
