--- a/app/src/main/res/layout/activity_sold_out.xml
+++ b/app/src/main/res/layout/activity_sold_out.xml
@@ -106,7 +106,7 @@
                             android:background="@drawable/bg_edittext_selector"
                             android:gravity="center"
                             android:selectAllOnFocus="true"
-                            android:singleLine="true" />
+                             />
 
                         <RelativeLayout
                             android:id="@+id/search_supplier"
@@ -168,7 +168,7 @@
                             android:background="@drawable/bg_edittext_selector"
                             android:gravity="center_vertical"
                             android:imeOptions="actionNone"
-                            android:singleLine="true" />
+                             />
 
                         <RelativeLayout
                             android:id="@+id/search"
@@ -197,7 +197,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center"
-                        android:singleLine="true"
+
                         android:text="产品名称"
                         android:textColor="@android:color/black"
                         android:textSize="15sp" />
@@ -208,7 +208,7 @@
                         android:layout_height="wrap_content"
                         android:background="@drawable/tv_bg"
                         android:gravity="center"
-                        android:singleLine="true"
+
                         android:textColor="@color/white"
                         android:textSize="19sp" />
 
@@ -283,7 +283,7 @@
                             android:layout_weight="3"
                             android:background="@drawable/tv_bg"
                             android:gravity="center"
-                            android:singleLine="true"
+
                             android:textColor="@color/white"
                             android:textSize="15sp" />
                     </LinearLayout>
@@ -346,13 +346,13 @@
                             android:layout_height="match_parent"
                             android:background="@color/divider_color" />
 
-                        <com.fangzuo.assist.widget.MyWaveHouseSpinner
+                        <com.fangzuo.assist.widget.SpinnerWaveHouse
                             android:id="@+id/sp_wavehouse"
                             android:layout_width="0dp"
                             android:layout_height="40dp"
                             android:layout_marginLeft="3dp"
                             android:layout_weight="1"
-                            android:singleLine="true"
+
                             android:textSize="15sp" />
                     </LinearLayout>
 
@@ -411,7 +411,7 @@
                             android:layout_weight="1"
                             android:background="@drawable/bg_edittext_selector"
                             android:inputType="numberDecimal"
-                            android:singleLine="true"
+
                             android:textSize="19sp" />
 
                         <View
@@ -427,7 +427,7 @@
                             android:layout_weight="1"
                             android:background="@drawable/bg_edittext_selector"
                             android:inputType="numberDecimal"
-                            android:singleLine="true"
+
                             android:textSize="19sp" />
                     </LinearLayout>
 
@@ -500,7 +500,7 @@
                             android:layout_weight="1"
                             android:background="@drawable/bg_edittext_selector"
                             android:inputType="numberDecimal"
-                            android:singleLine="true"
+
                             android:textSize="15sp" />
                     </LinearLayout>
 
