--- a/app/src/main/res/layout/activity_other_out_store.xml
+++ b/app/src/main/res/layout/activity_other_out_store.xml
@@ -71,7 +71,7 @@
 
                         <EditText
                             android:selectAllOnFocus="true"
-                            android:singleLine="true"
+
                             android:id="@+id/ed_supplier"
                             android:layout_width="0dp"
                             android:layout_height="40dp"
@@ -156,12 +156,12 @@
                             android:layout_width="1dp"
                             android:layout_height="match_parent"
                             android:background="@color/divider_color"/>
-                        <com.fangzuo.assist.widget.MyWaveHouseSpinner
+                        <com.fangzuo.assist.widget.SpinnerWaveHouse
                             android:id="@+id/sp_wavehouse"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:singleLine="true"
+
                             android:textSize="15sp" />
 
                     </LinearLayout>
@@ -213,7 +213,7 @@
                             android:layout_marginRight="10dp"
                             android:layout_weight="8"
                             android:background="@drawable/bg_edittext_selector"
-                            android:singleLine="true" />
+                             />
 
                         <RelativeLayout
                             android:id="@+id/search"
@@ -248,7 +248,7 @@
                     <TextView
                         android:id="@+id/tv_goodName"
                         android:layout_width="match_parent"
-                        android:singleLine="true"
+
                         android:gravity="center"
                         android:layout_height="wrap_content"
                         android:background="@drawable/tv_bg"
@@ -319,7 +319,7 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:background="@drawable/tv_bg"
-                            android:singleLine="true"
+
                             android:textColor="@color/white"
                             android:textSize="19sp" />
 
@@ -387,7 +387,7 @@
                             android:layout_weight="1"
                             android:gravity="center"
                             android:background="@drawable/bg_edittext_selector"
-                            android:singleLine="true"
+
                             android:textSize="15sp" />
                     </LinearLayout>
 
@@ -455,7 +455,7 @@
                             android:layout_height="40dp"
                             android:layout_weight="1"
                             android:background="@drawable/bg_edittext_selector"
-                            android:singleLine="true"
+
                             android:textSize="19sp" />
                     </LinearLayout>
 
@@ -697,7 +697,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/bg_edittext_selector"
-                android:singleLine="true"
+
                 android:textSize="19sp" />
 
 
