--- a/app/src/main/res/layout/activity_produce_push_in_store.xml
+++ b/app/src/main/res/layout/activity_produce_push_in_store.xml
@@ -100,7 +100,7 @@
 
                         <include layout="@layout/line_shu" />
 
-                        <com.fangzuo.assist.widget.MyWaveHouseSpinner
+                        <com.fangzuo.assist.widget.SpinnerWaveHouse
                             android:id="@+id/sp_wavehouse"
                             android:layout_width="0dp"
                             android:layout_height="40dp"
@@ -216,7 +216,7 @@
                             android:background="@drawable/bg_edittext_selector"
                             android:gravity="center"
                             android:inputType="numberDecimal"
-                            android:singleLine="true"
+
                             android:textSize="15sp" />
 
                     </LinearLayout>
@@ -429,7 +429,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@android:drawable/edit_text"
-                android:singleLine="true"
+
                 android:textSize="19sp" />
 
 
